--- a/app/views/brexit_checker/_question_multiple_grouped_choice.html.erb
+++ b/app/views/brexit_checker/_question_multiple_grouped_choice.html.erb
@@ -1,5 +1,6 @@
 <%= render "govuk_publishing_components/components/title", {
   title: current_question.text,
+  context: current_question.caption,
   margin_bottom: 5
 } %>
 
