--- a/app/views/brexit_checker/_question_single_choice.html.erb
+++ b/app/views/brexit_checker/_question_single_choice.html.erb
@@ -1,5 +1,6 @@
 <%= render "govuk_publishing_components/components/radio", {
   name: "c[]",
+  heading_caption: current_question.caption,
   heading: current_question.text,
   description: formatted_description,
   hint: current_question.hint_text,
