--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -15,6 +15,8 @@
   <% inverse = true %>
 <% end %>
 
+<%= model_variant.analytics_meta_tag.html_safe %>
+
 <form method="get" action="<%= content_item.base_path %>" class="js-live-search-form">
   <input type="hidden" name="parent" value="<%= @parent %>">
 
