--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -1,4 +1,14 @@
-@import "govuk_publishing_components/all_components_print";
+@import 'govuk_publishing_components/govuk_frontend_support';
+@import 'govuk_publishing_components/components/print/_back-link';
+@import 'govuk_publishing_components/components/print/_button';
+@import 'govuk_publishing_components/components/print/_feedback';
+@import 'govuk_publishing_components/components/print/_govspeak';
+@import 'govuk_publishing_components/components/print/_metadata';
+@import 'govuk_publishing_components/components/print/_search';
+@import 'govuk_publishing_components/components/print/_share-links';
+@import 'govuk_publishing_components/components/print/_skip-link';
+@import 'govuk_publishing_components/components/print/_subscription-links';
+@import 'govuk_publishing_components/components/print/_title';
 
 .filter-form,
 .feed {
