--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -19,20 +19,23 @@
 <% end %>
 
 <div class="govuk-width-container brexit-checker-results-page">
-  <%= render 'govuk_publishing_components/components/breadcrumbs', breadcrumbs: [
-    {
-      title: t('brexit_checker.breadcrumbs.home'),
-      url: "/"
-    },
-    {
-      title: t('brexit_checker.breadcrumbs.brexit-home'),
-      url: "/transition"
-    },
-    {
-      title: t('brexit_checker.breadcrumbs.brexit-check'),
-      url: "/transition-check"
-    }
-  ] %>
+  <%= render 'govuk_publishing_components/components/breadcrumbs', {
+    collapse_on_mobile: true,
+    breadcrumbs: [
+      {
+        title: t('brexit_checker.breadcrumbs.home'),
+        url: "/"
+      },
+      {
+        title: t('brexit_checker.breadcrumbs.brexit-home'),
+        url: "/transition"
+      },
+      {
+        title: t('brexit_checker.breadcrumbs.brexit-check'),
+        url: "/transition-check"
+      }
+    ]
+  } %>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <%= render "govuk_publishing_components/components/title", {
