--- a/app/views/qa_to_content/show.html.erb
+++ b/app/views/qa_to_content/show.html.erb
@@ -4,7 +4,10 @@
 <% end %>
 
 <div class="govuk-width-container">
-  <%= render 'govuk_publishing_components/components/breadcrumbs', breadcrumbs: breadcrumbs %>
+  <%= render 'govuk_publishing_components/components/breadcrumbs', {
+    breadcrumbs: breadcrumbs,
+    collapse_on_mobile: true
+  } %>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
