--- a/app/views/brexit_checker/_results_business_actions.html.erb
+++ b/app/views/brexit_checker/_results_business_actions.html.erb
@@ -17,7 +17,8 @@
           <div class="govuk-grid-column-two-thirds">
             <%= render "action_list", {
               analytics_group: "#{t('brexit_checker.results.audiences.business.heading')} - 1.",
-              actions: business_results[:actions]
+              actions: business_results[:actions],
+              heading_level: 3
             } %>
           </div>
         </div>
