Move account status from checker questions to results page
It has been decided that users can only login on the checker results
page.  Therefore moving the login/logout text there.  In later work, we
will update the plain-text link with a call to action.

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -39,6 +39,9 @@
 <div class="govuk-width-container brexit-checker-results-page">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <%= sanitize(@account_information) %>
+
+
       <%= render "govuk_publishing_components/components/title", {
         title: action_based_title
       } %>
