Implement saving updated results
This commit implements storing new checker results against the
account.

When the user is not logged into the checker:
- If they click the "Create a GOV.UK account" button
  - If they then register:
    - Attributes are set on their account. This PR doesn't touch this
      journey.
  - If they then login:
    - They get redirected back to the checker to confirm the new
      attributes.

- If they click the "sign in if you've saved your answers before"
  link:
  - If they then register:
    - Attributes are not set on their account. They see a link back to
      the checker, which goes to the confirm-new-attributes page.
  - If they then login:
    - They get redirected back to the confirm-new-attributes page.

When the user is logged into the checker:
- If their answers differ from the answers saved in their account:
  - If they click the link to save the new answers:
    - They get sent to the confirm-new-attributes page.

- If their answers match the answers saved in their account:
  - They don't see any call-to-action.

On the confirm-new-attributes page, both the old and new attributes
are shown (currently just as plain text lists) along with a save
button. If the user clicks the button, the OAuth access token in the
session is used to update attribute-store.

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -39,8 +39,19 @@
 <div class="govuk-width-container brexit-checker-results-page">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <%= sanitize(@account_information) %>
-
+      <% if accounts_enabled? %>
+        <% if logged_in? %>
+          <p class="govuk-body">Logged in. <a class="govuk-link" href="<%= transition_checker_end_session_path %>">Log out.</a></p>
+          <% if @results_differ %>
+            <p class="govuk-body">You've changed your answers. <a class="govuk-link" href="<%= transition_checker_save_results_confirm_path(c: criteria_keys) %>">Save this page instead?</a></p>
+          <% end %>
+          <% if @results_saved %>
+            <p class="govuk-body">Saved!</p>
+          <% end %>
+        <% else %>
+          <p class="govuk-body">Not logged in. <a class="govuk-link" href="<%= transition_checker_new_session_path %>">Log in.</a></p>
+        <% end %>
+      <% end %>
 
       <%= render "govuk_publishing_components/components/title", {
         title: action_based_title
@@ -59,23 +70,28 @@
   </div>
 
   <% if criteria_keys.present? %>
-    <%= render 'components/email_link', {
-      data_attributes: {
-        "module": "track-click",
-        "track-action": action_based_email_link_label,
-        "track-category": "StayUpdated",
-        "track-label": transition_checker_email_signup_path
-      },
-      link_text: action_based_email_link_label,
-      link_href: path_based_on_account_feature_flag,
-      link_title: t("brexit_checker.results.email_sign_up_title"),
-    } %>
+    <% unless accounts_enabled? && logged_in? %>
+      <%= render 'components/email_link', {
+        data_attributes: {
+          "module": "track-click",
+          "track-action": action_based_email_link_label,
+          "track-category": "StayUpdated",
+          "track-label": transition_checker_email_signup_path
+        },
+        link_text: action_based_email_link_label,
+        link_href: path_based_on_account_feature_flag,
+        link_title: t("brexit_checker.results.email_sign_up_title"),
+      } %>
+    <% end %>
 
     <%= render 'results_business_actions', business_results: @business_results if @business_results.any? %>
     <%= render 'results_citizen_actions', citizen_results_groups: @citizen_results_groups if @citizen_results_groups.any? %>
     <%= render 'results_with_no_actions', criteria: @criteria if (@business_results.empty? && @citizen_results_groups.empty?) %>
 
-    <%= render 'stay_updated' %>
+    <% unless accounts_enabled? && logged_in? %>
+      <%= render 'stay_updated' %>
+    <% end %>
+
     <%= render 'share_links' %>
     <%= render 'print_link' if @business_results.any? || @citizen_results_groups.any? %>
   <% end %>
