--- a/app/views/brexit_checker/save_results.html.erb
+++ b/app/views/brexit_checker/save_results.html.erb
@@ -67,7 +67,7 @@
 
         <p class="govuk-body">
           <%= t('brexit_checker.account_signup.or') %>
-          <a class="govuk-link" href="<%= "fixme" %>">
+          <a class="govuk-link" href="<%= transition_checker_save_results_confirm_path(c: criteria_keys) %>">
             <%= t('brexit_checker.account_signup.alternative_path_link_text') %></a>.
         </p>
 
