Update Govspeak component usage
The Govspeak component should not be used with the `content` parameter; it
should use a `do` block wrapped around sanitized markup instead.

See https://github.com/alphagov/govuk_publishing_components/pull/1632 for more info.

--- a/app/views/email_alert_subscriptions/new.html.erb
+++ b/app/views/email_alert_subscriptions/new.html.erb
@@ -33,7 +33,9 @@
 
     <% if @signup_presenter.body && !@signup_presenter.can_modify_choices? %>
       <div class="govspeak-wrapper">
-        <%= render 'govuk_publishing_components/components/govspeak', content: @signup_presenter.body.html_safe %>
+        <%= render 'govuk_publishing_components/components/govspeak', {} do %>
+          <%= sanitize(@signup_presenter.body) %>
+        <% end %>
       </div>
     <% end %>
 
