--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -27,6 +27,16 @@
     }
   }
 
+  .brexit-checker__action-urgent-tag {
+    margin-bottom: govuk-spacing(2);
+  }
+
+  .brexit-checker__action-urgent {
+    background-color: govuk-colour('light-grey');
+    padding: govuk-spacing(5) govuk-spacing(5) govuk-spacing(3) govuk-spacing(5);
+    border-left: 5px solid $govuk-brand-colour;
+  }
+
   .brexit-checker__content-wrapper {
     padding: 0 0 15px 0;
     border-bottom: 1px solid $govuk-border-colour;
