--- a/app/views/brexit_checker/_action_list.html.erb
+++ b/app/views/brexit_checker/_action_list.html.erb
@@ -4,6 +4,10 @@
 <% actions.each.with_index do | action, index | %>
   <div class="govuk-grid-row brexit-checker__action">
     <div class="brexit-checker__content-wrapper">
+      <% if action.urgent? && show_variant? %>
+        <div class="brexit-checker__action-urgent">
+        <strong class="govuk-tag brexit-checker__action-urgent-tag">Urgent</strong>
+      <% end %>
       <%= content_tag(heading_tag, class: "govuk-body brexit-checker__action_title") do %>
         <% if action.title_url.present? %>
           <a
@@ -54,6 +58,10 @@
               data-ecommerce-path="<%= action.guidance_path %>"
             ><%= action.guidance_link_text %></a>
           </p>
+        </div>
+      <% end %>
+      <% if action.urgent? && show_variant? %>
+        <%# closing div from .brexit-checker__action-urgent %>
         </div>
       <% end %>
     </div>
