--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -1,3 +1,5 @@
+$urgency-blue: #0055D2;
+
 .brexit-checker-results-page {
   .brexit-checker__criteria_explanation,
   .brexit-checker__criterion {
@@ -28,13 +30,19 @@
   }
 
   .brexit-checker__action-urgent-tag {
-    margin-bottom: govuk-spacing(2);
+    margin-bottom: govuk-spacing(4);
+    background-color: $urgency-blue;
   }
 
   .brexit-checker__action-urgent {
     background-color: govuk-colour('light-grey');
     padding: govuk-spacing(5) govuk-spacing(5) govuk-spacing(3) govuk-spacing(5);
-    border-left: 5px solid $govuk-brand-colour;
+    border-left: 5px solid $urgency-blue;
+  }
+
+  .brexit-checker__content-wrapper-urgent {
+    padding: 0 0 30px 0;
+    border-bottom: 1px solid $govuk-border-colour;
   }
 
   .brexit-checker__content-wrapper {
