Show results comparison table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@ $govuk-use-legacy-palette: false;
 @import 'govuk_publishing_components/components/step-by-step-nav-header';
 @import 'govuk_publishing_components/components/subscription-links';
 @import 'govuk_publishing_components/components/success-alert';
+@import 'govuk_publishing_components/components/table';
 @import 'govuk_publishing_components/components/title';
 
 @import 'components/*';
